tests/negative/neg_character_return_type.safe
-- Test: neg_character_return_type
-- Description: Character-returning functions reject integer return expressions.
-- Expected: REJECT type_check_failure

package neg_character_return_type

   function broken returns character

      return 999

